--- a/mio/source/_posts/APCS-19-10.md
+++ b/mio/source/_posts/APCS-19-10.md
@@ -298,9 +298,19 @@ int main(){
 
 $N, M \le 25$
 
-### 解法
+然後因為這題我的作法非常暴力（ dfs + 剪枝），所以我就沒有放解法 & code了
+dfs方法就是在這張圖的狀況下，拔掉四個邊哪個邊比較好，然後對那剩下的部分遞迴
+然後我沒有想到各種組合可能會被計算多次，所以可以稍微dp一下（反正數字不大
+考完後我真的不知道我在幹嘛 $\text{._.}$
 
-我自己是暴力dfs + 剪枝，正解應該是dp（數字夠小應該可以）
 
-### 我的暴力dfs
+## 後記
 
+其實我覺得我這次考的挺糟的，pC沒有實作上有大漏洞，pD整個沒想法
+本來考完的時候是覺得我這次要單場5 + 5應該要靠賽啦，就我要賭pD測資不夠硬（那時候還沒有發現pC的bug
+
+簡單講一下pC的bug好了，就是我原本會直接強制把「瞬移前」的點的距離蓋到「瞬移後」的點的距離上
+。。。欸感覺沒問題啊？
+不不不非常怪，如果「瞬移後」的點原本的權重比較小呢？
+恩對，所以我就這樣吃土了
+（土真好吃。。。哈哈哈。。。哈哈哈哈。。。嗚嗚
