--- a/mio/source/_posts/TOJ-365.md
+++ b/mio/source/_posts/TOJ-365.md
@@ -9,7 +9,7 @@ tags:
 ## 題目
 
 給定一個數列，為一群龍貓的『高度』
-定義只要 $a_i + 1 == a_j ( i + 1 == j )$ 就稱為愉悅龍貓群
+定義只要 $a_i + 1 = a_{i + 1}$ 就稱為愉悅龍貓群
 請實作出支援單點修改及區間查詢的 code
 [題目原網址](http://toj.tfcis.org/oj/pro/365/)
 
